--- a/index.css
+++ b/index.css
@@ -117,6 +117,10 @@ div.card {
     border-width: 0;
     margin: 1em;
   }
+
+div.w-100.m-0 {
+    box-shadow: none !important;
+}
   
 div.etudier {
     background-color: #9c92ac;
@@ -175,21 +179,21 @@ p.title {
     margin: 0.7em 0em 0.1em 0em;
 }
 
-.badge-primary {
+/* .badge-primary {
     background-color: darkorchid !important;
 }
   
 .badge-primary[href]:hover, .badge-primary[href]:focus {
     background-color: darkmagenta !important;
-}
+} */
 
-.badge-warning {
+/* .badge-warning {
     color: #ffffff !important;
 }
   
 .badge-warning[href]:hover, .badge-warning[href]:focus {
     color: #ffffff !important;
-}
+} */
   
 
 .badge {
